[package]
name = "repo-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
hudsucker = "0.20.0"
rcgen = "0.10.0" # Version used by hudsucker
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"
