[package]
name = "repo-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
hudsucker = "0.20.0"
hyper-rustls = "0.24.1"
ipnet = { version = "2.8.0", features = ["serde"] }
rcgen = "0.10.0" # Version used by hudsucker
rustls-pemfile = "1.0.3"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
